k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-backend-deployment
  namespace: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: docker.io/aalhatlan/backend:latest

          command: ["/bin/sh", "-c"]
          args:
            - |
              export SPRING_DATASOURCE_USERNAME=$(cat /mnt/secrets-store/sql-admin-username) &&
              export SPRING_DATASOURCE_PASSWORD=$(cat /mnt/secrets-store/sql-admin-password) &&
              java -jar app.jar

          ports:
            - containerPort: 8080

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"

          volumeMounts:
            - name: backend-secrets
              mountPath: /mnt/secrets-store
              readOnly: true

      volumes:
        - name: backend-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: backend-sql-secrets
